--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,25 +5,25 @@
       <%= render 'product', product: @product %>
 
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
-
-        <h4>Average Rating:</h4>
-        <div class="rated" data-score="<%= @product.average_rating %>"></div>
-        <p></p>
-        
-        <h4>Best review</h4>
-        <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>        
-        <p>
-          <b><%= @product.highest_rating_comment.user.first_name %> says:</b>
-          <%= @product.highest_rating_comment.body %>
-        </p>
-        
-        <h4>Worst review</h4>
-        <div class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></div>
-        <p> 
-          <b><%= @product.lowest_rating_comment.user.first_name %> says:</b>
-          <%= @product.lowest_rating_comment.body %>
-        </p>
-
+        <% if @comments.exists? %>
+          <h4>Average Rating:</h4>
+          <div class="rated" data-score="<%= @product.average_rating %>"></div>
+          <p></p>
+          
+          <h4>Best review</h4>
+          <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>        
+          <p>
+            <b><%= @product.highest_rating_comment.user.first_name %> says:</b>
+            <%= @product.highest_rating_comment.body %>
+          </p>
+          
+          <h4>Worst review</h4>
+          <div class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></div>
+          <p> 
+            <b><%= @product.lowest_rating_comment.user.first_name %> says:</b>
+            <%= @product.lowest_rating_comment.body %>
+          </p>
+        <%end%>
       </div>
     </div>
     
@@ -40,8 +40,10 @@
   <div class="container">
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
-        <%= render 'comments' %>
-        <%= render 'new_comment' %>
+        <% if @comments.exists? %>
+          <%= render 'comments' %>
+        <% end %>
+          <%= render 'new_comment' %>
       </div>
     </div>
   </div>
