--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,6 +42,7 @@
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <% if @comments.exists? %>
           <%= render 'comments' %>
+          <%= will_paginate @comments %>
         <% end %>
           <%= render 'new_comment' %>
       </div>
