--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -6,6 +6,7 @@
         <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
         <div class="rated" data-score="<%= comment.rating %>"></div>
         <p><%= comment.body %></p>
+        <%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
   <% end %>
