--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -55,8 +55,14 @@ $white: #ffffff;
 
 }
 
-// Pagination
+// Comments
 
+.fa-trash {
+  color: #B52A34;
+
+}
+
+// Pagination
 .flickr_pagination {
   text-align: center;
   padding: 0.3em;
