--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -43,6 +43,11 @@ h1 {
   }
 }
 
+.btn-outline-success {
+  color:$red;
+  border-color: $red;
+}
+
 .custom-link {
     a {
       color: $red !important;
